# openbb-bot

./: .env.example  README.md  main.py  mypy.ini  pyproject.toml
bot/: config.py  helpers.py  run_bot.py  showview.py
bot/cmds/: candlestick_cmds.py  chart_cmds.py  dd_cmds.py  fundamentals_cmds.py  sec_cmds.py  stockCandlestick_cmds.py
models/: api_models.py
utils/: backend.py  helpers.py  pywry_figure.py
